--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    margin: 0 auto;
+    margin: auto;
     background-color: #333333 !important;
 }
 .head {
@@ -7,7 +7,9 @@ body {
     height: 30px;
     width: 200%;
 }
-
+.layout{
+    margin:auto;
+}
 .account {
     color: white;
 }
