--- a/signin/signin.css
+++ b/signin/signin.css
@@ -2,13 +2,12 @@ html,
 body {
   height: 100%;
 }
-
 body {
   display: flex;
   align-items: center;
   padding-top: 40px;
   padding-bottom: 40px;
-  background-color: #f5f5f5;
+  background-color: currentColor;
 }
 
 .form-signin {
