--- a/signin/signin.css
+++ b/signin/signin.css
@@ -1,5 +1,4 @@
-html,
-body {
+html,body {
   height: 100%;
 }
 body {
@@ -8,6 +7,7 @@ body {
   padding-top: 40px;
   padding-bottom: 40px;
   background-color: currentColor;
+
 }
 
 .form-signin {
