--- a/signin/signin.css
+++ b/signin/signin.css
@@ -6,10 +6,8 @@ body {
   align-items: center;
   padding-top: 40px;
   padding-bottom: 40px;
-  background-color: currentColor;
-
+  background-color: black;
 }
-
 .form-signin {
   width: 100%;
   max-width: 330px;
