sua anh va thong tin, them image va sua ten file

--- a/style.css
+++ b/style.css
@@ -153,9 +153,10 @@ body {
     -webkit-line-clamp: 2;
     overflow: hidden;
 }
-.product-title:hover {
+.product-title:hover{
     text-decoration: none !important;
     opacity: 0.8;
+
 }
 .price {
     display: flex;
@@ -196,7 +197,7 @@ body {
 .gene_img img {
     display: block;
     width: 100%;
-    height: 360px;
+    height: 430px;
 }
 .gene_info {
     padding: 8px;
@@ -384,7 +385,10 @@ body {
     background-color: orange !important;
     margin-right: 5px;
 }
-
 .text-reset{
     color: white;
+}
+.text-reset:hover p{
+    text-decoration:none;
+    color:red;
 }
