doi mau bg hover

--- a/style.css
+++ b/style.css
@@ -147,8 +147,7 @@ body {
     height: 30px;
     font-size: 18px;
     font-weight: 600;
-    color: #555555;
-    color: orange;
+    color: white;
     display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 2;
@@ -157,9 +156,8 @@ body {
 .product-title:hover{
     text-decoration: none !important;
     opacity: 0.8;
-    color: #fff;
-
-}
+    color: #ed812b;
+} 
 .price {
     display: flex;
     flex-direction: column;
