--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ body {
 
 .product-title {
     width: 100%;
-    height: 30px;
+    height: auto;
     font-size: 18px;
     font-weight: 600;
     color: white;
